--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "node-copydir": "^1.0.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
